--- a/JardinDeLaure.html
+++ b/JardinDeLaure.html
@@ -2,28 +2,34 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" content="width=device-width">
+        <meta charset="UTF-8" content="width=device-width, initial-scale=1">
         <base href=".">
         <link rel="stylesheet" href="style.css">
         <title> N'ouvrez pas ce site. </title>
     </head>
     <body>
-        <nav class="header">
-            <ul>
-                <li><a href="other.html"><span>...</span></a> </li>
-                <li> .. ha </li>
-            </ul>
-        </nav>
-
-        <h1>Le jardin de Laure</h1>
- 
-        <img src="./images/LaureJardineLaTerrasse.jpg">
-        <h2>Que faut-il pour reproduire cette terrasse <em>Versaillaise</em>?</h2>
-        <ul>
-            <li> <strong>Surface nécessaire:</strong> une ptite terrasse avec qqes vélos dessus </li>
-            <li> <strong>Plein d'amour</strong> (pour son doudou)</li>
-            <li> <strong>Un papa qui jardine comme personne</strong> (pour Auchan)</li>
-        </ul>
-        Et ne surtout pas oublier une oeuvre d'art abandonée par la ville d'Aubagne en fond.
+        <div class="container">
+            <div>
+                <nav class="header">
+                    <ul>
+                        <li><a href="index.html">Site d'Axel</a> </li>
+                        <li><a href="JardinDeLaure.html">Jardin de Laure(dinateur)</a></li>
+                    </ul>
+                </nav>
+                <div style="width:90%;margin: 0 auto;">
+                    <h1>Le jardin de Laure</h1>
+                    <h2>Que faut-il pour reproduire cette terrasse <em>Versaillaisque</em>?</h2>
+                    <ul>
+                        <li> <strong>Surface nécessaire:</strong> une ptite terrasse avec qqes vélos dessus </li>
+                        <li> <strong>Plein d'amour</strong> (pour son doudou)</li>
+                        <li> <strong>Un papa qui jardine comme personne</strong> (pour Auchan)</li>
+                    </ul>
+                    <span>Et ne surtout pas oublier une oeuvre d'art abandonée par la ville d'Aubagne en fond.</span>
+                </div>
+            </div>
+            <div>
+                <img src="images/LaureJardineLaTerrasse_cropped.jpg" width="100%" height="100%">
+            </div>
+        </div>
     </body>
 </html>
