--- a/index.html
+++ b/index.html
@@ -7,22 +7,28 @@
         <title> N'ouvrez pas ce site. </title>
     </head>
     <body>
-        <nav class="header">
-            <ul>
-                <li><a href="JardinDeLaure.html"><span>Jardin de Laure <span></a> </li>
-                <li> .. ha </li>
-            </ul>
-        </nav>
-
-        <h1>Le jardin de Laure</h1>
- 
-        <img src="./images/LaureJardineLaTerrasse.jpg">
-        <h2>Que faut-il pour reproduire cette terrasse <em>Versaillaise</em>?</h2>
-        <ul>
-            <li> <strong>Surface nécessaire:</strong> une ptite terrasse avec qqes vélos dessus </li>
-            <li> <strong>Plein d'amour</strong> (pour son doudou)</li>
-            <li> <strong>Un papa qui jardine comme personne</strong> (pour Auchan)</li>
-        </ul>
-        Et ne surtout pas oublier une oeuvre d'art abandonée par la ville d'Aubagne en fond.
+        <div class="container">
+            <div>
+                <nav class="header">
+                    <ul>
+                        <li><a href="index.html">Site d'Axel</a> </li>
+                        <li><a href="JardinDeLaure.html">Jardin de Laure(dinateur)</a></li>
+                    </ul>
+                </nav>
+                <div style="width:90%;margin: 0 auto;">
+                    <h1>Le site d'Axel</h1>
+                    <h2>Pourquoi ? Eh bien je ne sais pas, c'est long les weekend de trois jours.</h2>
+                    Vous trouverez ici
+                    <ul>
+                        <li> <strong>Mes codes</strong> que vous ne devriez pas lire, ça se fait pas. </li>
+                        <li> <strong>Mes projets</strong>, advienne que pourra.</li>
+                        <li> <strong>Des photos glorieuses.</strong></li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <img src="images/sourire.jpg" width="100%" height="100%">
+            </div>
+        </div>
     </body>
 </html>
