--- a/JardinDeLaure.html
+++ b/JardinDeLaure.html
@@ -18,7 +18,7 @@
                 </nav>
                 <div style="width:90%;margin: 0 auto;">
                     <h1>Le jardin de Laure</h1>
-                    <h2>Que faut-il pour reproduire cette terrasse <em>Versaillaisque</em>?</h2>
+                    <h2>Que faut-il pour reproduire cette terrasse <em>Versaillesque</em>?</h2>
                     <ul>
                         <li> <strong>Surface nécessaire:</strong> une ptite terrasse avec qqes vélos dessus </li>
                         <li> <strong>Plein d'amour</strong> (pour son doudou)</li>
