other initial commit

--- a/JardinDeLaure.html
+++ b/JardinDeLaure.html
@@ -1,12 +1,11 @@
-
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" content="width=device-width, initial-scale=1">
-        <base href=".">
-        <link rel="stylesheet" href="style.css">
-        <title> N'ouvrez pas ce site. </title>
-    </head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href=".">
+    <link rel="stylesheet" href="style.css">
+    <title> N'ouvrez pas ce site. </title>
+</head>
     <body>
         <div class="container">
             <div>
