--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" content="width=device-width">
-        <base href=".">
-        <link rel="stylesheet" href="style.css">
-        <title> N'ouvrez pas ce site. </title>
-    </head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href=".">
+    <link rel="stylesheet" href="style.css">
+    <title> N'ouvrez pas ce site. </title>
+</head>
     <body>
         <div class="container">
             <div>
@@ -17,7 +17,7 @@
                 </nav>
                 <div style="width:90%;margin: 0 auto;">
                     <h1>Le site d'Axel</h1>
-                    <h2>Pourquoi ? Eh bien je ne sais pas, c'est long les weekend de trois jours.</h2>
+                    <h2>Pourquoi ? Eh bien je ne sais pas, c'est long un weekend de trois jours.</h2>
                     Vous trouverez ici
                     <ul>
                         <li> <strong>Mes codes</strong> que vous ne devriez pas lire, ça se fait pas. </li>
