--- a/JardinDeLaure.html
+++ b/JardinDeLaure.html
@@ -1,34 +1,79 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href=".">
-    <link rel="stylesheet" href="style.css">
-    <title> N'ouvrez pas ce site. </title>
-</head>
-    <body>
-        <div class="container">
-            <div>
-                <nav class="header">
-                    <ul>
-                        <li><a href="index.html">Site d'Axel</a> </li>
-                        <li><a href="JardinDeLaure.html">Jardin de Laure(dinateur)</a></li>
-                    </ul>
-                </nav>
-                <div style="width:90%;margin: 0 auto;">
-                    <h1>Le jardin de Laure</h1>
-                    <h2>Que faut-il pour reproduire cette terrasse <em>Versaillesque</em>?</h2>
-                    <ul>
-                        <li> <strong>Surface nécessaire:</strong> une ptite terrasse avec qqes vélos dessus </li>
-                        <li> <strong>Plein d'amour</strong> (pour son doudou)</li>
-                        <li> <strong>Un papa qui jardine comme personne</strong> (pour Auchan)</li>
-                    </ul>
-                    <span>Et ne surtout pas oublier une oeuvre d'art abandonée par la ville d'Aubagne en fond.</span>
-                </div>
-            </div>
-            <div>
-                <img src="images/LaureJardineLaTerrasse_cropped.jpg" width="100%" height="100%">
-            </div>
-        </div>
-    </body>
+ <head>
+  <meta charset="utf-8" content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <base href="."/>
+  <link href="style.css" rel="stylesheet"/>
+  <title>
+   N'ouvrez pas ce site.
+  </title>
+ </head>
+ <body>
+  <div class="container">
+   <div>
+    <nav class="header">
+     <ul>
+      <li>
+       <a href="index.html">
+        Site d'Axel
+       </a>
+      </li>
+      <li>
+       <a href="JardinDeLaure.html">
+        Jardin de Laure(dinateur)
+       </a>
+      </li>
+      <li>
+       <a href="Trift.html">
+        Trift
+       </a>
+      </li>
+      <li>
+       <a href="mamá.html">
+        Mamasita
+       </a>
+      </li>
+     </ul>
+    </nav>
+    <div style="width:90%;margin: 0 auto;">
+     <h1>
+      Le jardin de Laure
+     </h1>
+     <h2>
+      Que faut-il pour reproduire cette terrasse
+      <em>
+       Versaillesque
+      </em>
+      ?
+     </h2>
+     <ul>
+      <li>
+       <strong>
+        Surface nécessaire:
+       </strong>
+       une ptite terrasse avec qqes vélos dessus
+      </li>
+      <li>
+       <strong>
+        Plein d'amour
+       </strong>
+       (pour son doudou)
+      </li>
+      <li>
+       <strong>
+        Un papa qui jardine comme personne
+       </strong>
+       (pour Auchan)
+      </li>
+     </ul>
+     <span>
+      Et ne surtout pas oublier une oeuvre d'art abandonée par la ville d'Aubagne en fond.
+     </span>
+    </div>
+   </div>
+   <div>
+    <img height="100%" src="images/LaureJardineLaTerrasse_cropped.jpg" width="100%"/>
+   </div>
+  </div>
+ </body>
 </html>
