--- a/index.html
+++ b/index.html
@@ -1,34 +1,75 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href=".">
-    <link rel="stylesheet" href="style.css">
-    <title> N'ouvrez pas ce site. </title>
-</head>
-    <body>
-        <div class="container">
-            <div>
-                <nav class="header">
-                    <ul>
-                        <li><a href="index.html">Site d'Axel</a> </li>
-                        <li><a href="JardinDeLaure.html">Jardin de Laure(dinateur)</a></li>
-                    </ul>
-                </nav>
-                <div style="width:90%;margin: 0 auto;">
-                    <h1>Le site d'Axel</h1>
-                    <h2>Pourquoi ? Eh bien je ne sais pas, c'est long un weekend de trois jours.</h2>
-                    Vous trouverez ici
-                    <ul>
-                        <li> <strong>Mes codes</strong> que vous ne devriez pas lire, ça se fait pas. </li>
-                        <li> <strong>Mes projets</strong>, advienne que pourra.</li>
-                        <li> <strong>Des photos glorieuses.</strong></li>
-                    </ul>
-                </div>
-            </div>
-            <div>
-                <img src="images/sourire.jpg" width="100%" height="100%">
-            </div>
-        </div>
-    </body>
+ <head>
+  <meta charset="utf-8" content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <base href="."/>
+  <link href="style.css" rel="stylesheet"/>
+  <title>
+   N'ouvrez pas ce site.
+  </title>
+ </head>
+ <body>
+  <nav class="header">
+   <ul>
+    <li>
+     <a href="index.html">
+      Site d'Axel
+     </a>
+    </li>
+    <li>
+     <a href="JardinDeLaure.html">
+      Jardin de Laure(dinateur)
+     </a>
+    </li>
+    <li>
+     <a href="Trift.html">
+      Trift
+     </a>
+    </li>
+    <li>
+     <a href="mamá.html">
+      Mamasita
+     </a>
+    </li>
+   </ul>
+  </nav>
+  <div class="container">
+   <div>
+    <div style="width:90%;margin: 0 auto;">
+     <h1>
+      Le site d'Axel
+     </h1>
+     <h2>
+      Pourquoi ? Eh bien je ne sais pas, c'est long un weekend de trois jours.
+     </h2>
+     Vous trouverez ici
+     <ul>
+      <li>
+       <strong>
+        Mes codes
+       </strong>
+       que vous ne devriez pas lire, ça se fait pas.
+      </li>
+      <li>
+       <strong>
+        Mes projets
+       </strong>
+       , advienne que pourra.
+      </li>
+      <li>
+       <strong>
+        Des photos glorieuses.
+       </strong>
+      </li>
+     </ul>
+    </div>
+   </div>
+   <div>
+    <img height="100%" src="https://raw.githubusercontent.com/giboul/TriftGeoClaw/refs/heads/main/drawing.pngimages/sourire.jpg" width="100%"/>
+   </div>
+  </div>
+ </body>
+ <footer>
+  Contact : Axel Giboulot--------------------------
+ </footer>
 </html>
