--- a/Trift.html
+++ b/Trift.html
@@ -34,13 +34,13 @@
      </li>
     </ul>
    </nav>
-    <div style="width:100%;margin: 0 auto;" class="image-overlay-container">
-     <h1 style="text-align: right;">
-      Projet de Master :<br>
-      Avalanches et vagues d'impulsion
-     </h1>
-     <img style="background-image:url(images/Trift-drawing-low.png);background-size:cover;" src="images/Trift-drawing.png" width="100%" height="auto" >
-    </div>
+   <div class="image-overlay-container" style="width:100%;margin: 0 auto;">
+    <h1 style="text-align: right;">
+     Projet de Master :
+     <br/>
+     Avalanches et vagues d'impulsion
+    </h1>
+    <img height="auto" src="images/Trift-drawing.png" style="background-image:url(images/Trift-drawing-low.png);background-size:cover;" width="100%"/>
    </div>
   </body>
  </body>
