--- a/JardinDeLaure.html
+++ b/JardinDeLaure.html
@@ -9,67 +9,61 @@
   </title>
  </head>
  <body>
+  <nav class="header">
+   <ul>
+    <li>
+     <a href="index.html">
+      Site d'Axel
+     </a>
+    </li>
+    <li>
+     <a href="JardinDeLaure.html">
+      Jardin de Laure(dinateur)
+     </a>
+    </li>
+    <li>
+     <a href="Trift.html">
+      Trift
+     </a>
+    </li>
+    <li>
+     <a href="mamasita.html">
+      Mamasita
+     </a>
+    </li>
+   </ul>
+  </nav>
   <div class="container">
-   <div>
-    <nav class="header">
-     <ul>
-      <li>
-       <a href="index.html">
-        Site d'Axel
-       </a>
-      </li>
-      <li>
-       <a href="JardinDeLaure.html">
-        Jardin de Laure(dinateur)
-       </a>
-      </li>
-      <li>
-       <a href="Trift.html">
-        Trift
-       </a>
-      </li>
-      <li>
-       <a href="mamá.html">
-        Mamasita
-       </a>
-      </li>
-     </ul>
-    </nav>
-    <div style="width:90%;margin: 0 auto;">
-     <h1>
-      Le jardin de Laure
-     </h1>
-     <h2>
-      Que faut-il pour reproduire cette terrasse
-      <em>
-       Versaillesque
-      </em>
-      ?
-     </h2>
-     <ul>
-      <li>
-       <strong>
-        Surface nécessaire:
-       </strong>
-       une ptite terrasse avec qqes vélos dessus
-      </li>
-      <li>
-       <strong>
-        Plein d'amour
-       </strong>
-       (pour son doudou)
-      </li>
-      <li>
-       <strong>
-        Un papa qui jardine comme personne
-       </strong>
-       (pour Auchan)
-      </li>
-     </ul>
-     <span>
-      Et ne surtout pas oublier une oeuvre d'art abandonée par la ville d'Aubagne en fond.
-     </span>
-    </div>
+   <div style="width:90%;margin: 0 auto;">
+    <h1 style="margin-left: 0%;">
+     Le jardin de Laure
+    </h1>
+    <h2 style="margin-left: 0%;">
+     Que faut-il pour reproduire cette terrasse Versaillesque ?
+    </h2>
+    <ul>
+     <li>
+      <strong>
+       Surface nécessaire:
+      </strong>
+      une ptite terrasse avec qqes vélos dessus
+     </li>
+     <li>
+      <strong>
+       Plein d'amour
+      </strong>
+      (pour son doudou)
+     </li>
+     <li>
+      <strong>
+       Un papa qui jardine comme personne
+      </strong>
+      (pour Auchan)
+     </li>
+    </ul>
+    <span>
+     Et ne surtout pas oublier une oeuvre d'art abandonée par la ville d'Aubagne en fond.
+    </span>
    </div>
    <div>
     <img height="100%" src="images/LaureJardineLaTerrasse_cropped.jpg" width="100%"/>
