--- a/Trift.html
+++ b/Trift.html
@@ -9,39 +9,40 @@
   </title>
  </head>
  <body>
-  <body>
-   <nav class="header">
-    <ul>
-     <li>
-      <a href="index.html">
-       Site d'Axel
-      </a>
-     </li>
-     <li>
-      <a href="JardinDeLaure.html">
-       Jardin de Laure(dinateur)
-      </a>
-     </li>
-     <li>
-      <a href="Trift.html">
-       Trift
-      </a>
-     </li>
-     <li>
-      <a href="mamá.html">
-       Mamasita
-      </a>
-     </li>
-    </ul>
-   </nav>
-   <div class="image-overlay-container" style="width:100%;margin: 0 auto;">
-    <h1 style="text-align: right;">
-     Projet de Master :
-     <br/>
-     Avalanches et vagues d'impulsion
-    </h1>
-    <img height="auto" src="images/Trift-drawing.png" style="background-image:url(images/Trift-drawing-low.png);background-size:cover;" width="100%"/>
-   </div>
-  </body>
+  <nav class="header">
+   <ul>
+    <li>
+     <a href="index.html">
+      Site d'Axel
+     </a>
+    </li>
+    <li>
+     <a href="JardinDeLaure.html">
+      Jardin de Laure(dinateur)
+     </a>
+    </li>
+    <li>
+     <a href="Trift.html">
+      Trift
+     </a>
+    </li>
+    <li>
+     <a href="mamasita.html">
+      Mamasita
+     </a>
+    </li>
+   </ul>
+  </nav>
+  <div class="image-overlay-container" style="width:100%; position: relative;">
+   <img height="auto" src="images/Trift-drawing.png" style="background-image:url(images/Trift-drawing-low.png);background-size:cover;" width="100%"/>
+   <h1 style="text-align: right; position: absolute; margin-right: 0; top: 2%; right: 2%;">
+    Projet de Master :
+    <br/>
+    Avalanches et vagues d'impulsion
+   </h1>
+  </div>
+  <footer>
+   Contact : attrape-moi@si.tu.peux
+  </footer>
  </body>
 </html>
