--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      </a>
     </li>
     <li>
-     <a href="mamá.html">
+     <a href="mamasita.html">
       Mamasita
      </a>
     </li>
@@ -65,11 +65,11 @@
     </div>
    </div>
    <div>
-    <img height="100%" src="https://raw.githubusercontent.com/giboul/TriftGeoClaw/refs/heads/main/drawing.pngimages/sourire.jpg" width="100%"/>
+    <img height="100%" src="images/sourire.jpg" width="100%"/>
    </div>
   </div>
  </body>
  <footer>
-  Contact : Axel Giboulot--------------------------
+  Contact : attrape-moi@si.tu.peux
  </footer>
 </html>
