--- a/_nav.html
+++ b/_nav.html
@@ -3,6 +3,6 @@
         <li><a href="index.html">Site d'Axel</a> </li>
         <li><a href="JardinDeLaure.html">Jardin de Laure(dinateur)</a></li>
         <li><a href="Trift.html">Trift</a></li>
-        <li><a href="mamá.html">Mamasita</a></li>
+        <li><a href="mamasita.html">Mamasita</a></li>
     </ul>
 </nav>
