--- a/JardinDeLaure.html
+++ b/JardinDeLaure.html
@@ -27,8 +27,8 @@
      </a>
     </li>
     <li>
-     <a href="mamasita.html">
-      Mamasita
+     <a href="mamacita.html">
+      Mamacita
      </a>
     </li>
    </ul>
