--- a/mamacita.html
+++ b/mamacita.html
@@ -27,8 +27,8 @@
      </a>
     </li>
     <li>
-     <a href="mamasita.html">
-      Mamasita
+     <a href="mamacita.html">
+      Mamacita
      </a>
     </li>
    </ul>
@@ -130,11 +130,11 @@
     Y por querernos como nosotros te queremos a ti.
    </div>
   </div>
-   <div style="position: relative;">
-    <img height="100%" src="images/familia/garcias_bw.jpg" width="100%"/>
-    <h1 style="text-align: right; position: absolute; margin-right: 0; top: 2%; right: 2%;">
-     Feliz cumpleaños mamá &lt;3.
-    </h1>
-   </div>
+  <div style="position: relative;">
+   <img height="100%" src="images/familia/garcias_bw.jpg" width="100%"/>
+   <h1 style="text-align: right; position: absolute; margin-right: 0; top: 2%; right: 2%;">
+    Feliz cumpleaños mamá &lt;3.
+   </h1>
+  </div>
  </body>
 </html>
