--- a/mamacita.html
+++ b/mamacita.html
@@ -106,7 +106,7 @@
     Mi mamá conoció a mucha gente.
    </div>
    <div class="centered-text">
-    Y tiene muy buenos amigos y amigas (ma faltan fótos).
+    Y tiene muy buenos amigos y amigas (me faltan fótos).
    </div>
    <div>
     <img height="100%" src="images/familia/mama-mayo-dole.jpg" width="100%"/>
