--- a/JardinDeLaure.html
+++ b/JardinDeLaure.html
@@ -33,12 +33,12 @@
     </li>
    </ul>
   </nav>
-  <div class="container">
+  <div class="grid-container">
    <div style="width:90%;margin: 0 auto;">
-    <h1 style="margin-left: 0%;">
+    <h1>
      Le jardin de Laure
     </h1>
-    <h2 style="margin-left: 0%;">
+    <h2>
      Que faut-il pour reproduire cette terrasse Versaillesque ?
     </h2>
     <ul>
