--- a/Trift.html
+++ b/Trift.html
@@ -34,7 +34,7 @@
    </ul>
   </nav>
   <div class="image-overlay-container" style="width:100%; position: relative;">
-   <img height="auto" src="images/Trift-drawing.png" style="background-image:url(images/Trift-drawing-low.png);background-size:cover;" width="100%"/>
+   <img width="100%" src="images/Trift-drawing.png" style="background-image:url(images/Trift-drawing-low.png);background-size:cover;"/>
    <h1 style="text-align: right; position: absolute; margin-right: 0; top: 2%; right: 2%;">
     Projet de Master :
     <br/>
