--- a/mamacita.html
+++ b/mamacita.html
@@ -33,8 +33,8 @@
     </li>
    </ul>
   </nav>
-  <div class="container">
-   <div style="width:90%;margin: 0 auto;">
+  <div class="grid-container">
+   <div style="width: 90%; margin: 1rem 1rem;">
     <h1 style="margin-left: 0%;">
      Fragmentos de la vida de mi mamá
     </h1>
