--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </li>
    </ul>
   </nav>
-  <div class="container">
+  <div class="grid-container"">
    <div>
     <div style="width:90%;margin: 0 auto;">
      <h1>
@@ -68,6 +68,7 @@
     <img height="100%" src="images/sourire.jpg" width="100%"/>
    </div>
   </div>
+  <div style="background-color: red;margin-top: 0;">mmmm</div>
  </body>
  <footer>
   Contact : attrape-moi@si.tu.peux
